--- a/TestJava.yml
+++ b/TestJava.yml
@@ -1,4 +1,5 @@
 # This is a basic workflow that is manually triggered
+# This is a basic workflow that is manually triggered
 
 name: TestJava
 
@@ -58,4 +59,5 @@ jobs:
       - name: run tests and create report 
         working-directory: ./test
         run: java  "../testresources/junit-platform-suite-commons-1.8.2.jar:../testresources/junit-platform-suite-api-1.8.2.jar:../testresources/junit-platform-suite-engine-1.8.2:../testresources/juniorg.junit.platform.console.ConsoleLauncher " -cp "./prog5121poe" --select-class TaskTest  --reports-dir ="reports"
+
 
